# hra-jupyter-widgets

./: .gitignore  CHANGELOG.md  README.md  example.ipynb  pyproject.toml  usage.ipynb
src/hra_jupyter_widgets/: __init__.py
src/hra_jupyter_widgets/static/: hra_app.js  hra_app_v2.js  model_viewer.css  model_viewer.js  widget.js
src/hra_jupyter_widgets/trait_types/: __init__.py  attribute.py  defs.py  event.py
src/hra_jupyter_widgets/traits/: __init__.py  input.py  output.py  script.py  style.py  tag_name.py
src/hra_jupyter_widgets/widgets/: __init__.py  _base.py  _constants.py  _stylesheets.py  _traits.py  _utils.py  body_ui.py  cde-visualization.py  cde_visualization.py  eui.py  eui_organ_information.py  ftu_explorer.py  ftu_explorer_small.py  hra_app.py  medical_illustration.py  model_viewer.py  node_dist_vis.py  rui.py
