[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hra_jupyter_widgets"
version = "0.1.0"
dependencies = ["anywidget"]
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]
