[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hra_jupyter_widgets"
version = "0.2.0"
dependencies = ["anywidget", "traitlets>=5.10"]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["Human Reference Atlas", "HRA", "jupyter", "widgets"]
authors = [
  { name = "Axel (Daniel) Bolin", email = "axbolin@iu.edu" },
  { name = "Bruce W. Herr II", email = "bherr@iu.edu" },
]

[project.urls]
Homepage = "https://github.com/x-atlas-consortia/hra-jupyter-widgets"
Documentation = "https://github.com/x-atlas-consortia/hra-jupyter-widgets"
Repository = "https://github.com/x-atlas-consortia/hra-jupyter-widgets.git"
Issues = "https://github.com/x-atlas-consortia/hra-jupyter-widgets/issues"
Changelog = "https://github.com/x-atlas-consortia/hra-jupyter-widgets/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
python = "3.9"
features = ["dev"]
